# haskell-exercises

./: .gitignore  README.md  haskell-training.cabal
src/: Impl.hs  Lib.hs
test/: Spec.hs
