name:                haskell-training
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib, Impl
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
  default-language:    Haskell2010

test-suite haskell-training-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-training
                     , hspec
                     , QuickCheck
                     , hspec-core
                     , containers
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
